
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct command_struct {int pid; int ppid; int name; int command; } ;
typedef int buf ;


 int COMMAND_NEED ;
 int COMMAND_SIZE ;
 int memset (char*,char,int) ;
 int strcpy (int ,char*) ;
 int write (int,char*,int) ;

int main()
{
   int fd = 3;
   char buf[COMMAND_SIZE];
   struct command_struct* cmd = (struct command_struct*) buf;

   memset(buf, '\0', sizeof(buf));
   cmd->command = COMMAND_NEED;
   cmd->pid = 17;
   cmd->ppid = 16;
   strcpy(cmd->name, "/home/pat/x/foo");
   write(fd, buf, COMMAND_SIZE);
   return 0;
}
