; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_21538.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_21538.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.command_struct = type { i32, i32, i32, i32 }

@COMMAND_SIZE = common dso_local global i32 0, align 4
@COMMAND_NEED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [16 x i8] c"/home/pat/x/foo\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.command_struct*, align 8
  store i32 0, i32* %1, align 4
  store i32 3, i32* %2, align 4
  %6 = load i32, i32* @COMMAND_SIZE, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i8, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = bitcast i8* %9 to %struct.command_struct*
  store %struct.command_struct* %10, %struct.command_struct** %5, align 8
  %11 = trunc i64 %7 to i32
  %12 = call i32 @memset(i8* %9, i8 signext 0, i32 %11)
  %13 = load i32, i32* @COMMAND_NEED, align 4
  %14 = load %struct.command_struct*, %struct.command_struct** %5, align 8
  %15 = getelementptr inbounds %struct.command_struct, %struct.command_struct* %14, i32 0, i32 3
  store i32 %13, i32* %15, align 4
  %16 = load %struct.command_struct*, %struct.command_struct** %5, align 8
  %17 = getelementptr inbounds %struct.command_struct, %struct.command_struct* %16, i32 0, i32 0
  store i32 17, i32* %17, align 4
  %18 = load %struct.command_struct*, %struct.command_struct** %5, align 8
  %19 = getelementptr inbounds %struct.command_struct, %struct.command_struct* %18, i32 0, i32 1
  store i32 16, i32* %19, align 4
  %20 = load %struct.command_struct*, %struct.command_struct** %5, align 8
  %21 = getelementptr inbounds %struct.command_struct, %struct.command_struct* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @strcpy(i32 %22, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %24 = load i32, i32* %2, align 4
  %25 = load i32, i32* @COMMAND_SIZE, align 4
  %26 = call i32 @write(i32 %24, i8* %9, i32 %25)
  store i32 0, i32* %1, align 4
  %27 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %27)
  %28 = load i32, i32* %1, align 4
  ret i32 %28
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @memset(i8*, i8 signext, i32) #2

declare dso_local i32 @strcpy(i32, i8*) #2

declare dso_local i32 @write(i32, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
